Does the parser like this better?

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,4 +22,4 @@ jobs:
           tag: ${{ github.sha }}
           containerRegistry: true
       - name: "Docker: Image URL"
-        run: "echo Docker Image URL:" ${{ steps.build.outputs.imageURL }}:${{ github.sha }}
+        run: "echo Docker Image URL: ${{ steps.build.outputs.imageURL }}:${{ github.sha }}"
