Well, it doesn't

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,7 +1,10 @@
 name: Docker
 
 on:
-  [push, pull_request]:
+  pull_request:
+    paths-ignore:
+      - '.**'
+  push:
     paths-ignore:
       - '.**'
 
