--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,9 +19,9 @@ jobs:
         # both latest AND semver...
       - name: "Config: Semver Tags"
         run: |
-          echo "SEMVER_TAGS::$(echo ${{ github.ref }} \
+          echo "SEMVER_TAGS=$(echo ${{ github.ref }} \
           | sed -e 's/refs\/tags\///g' \
-          | sed -E 's/v?([0-9]+)\.([0-9]+)\.([0-9]+)(-[a-zA-Z]+(\.[0-9]+)?)?/\1.\2.\3\4\,\1.\2\4\,\1\4/g')" $GITHUB_ENV
+          | sed -E 's/v?([0-9]+)\.([0-9]+)\.([0-9]+)(-[a-zA-Z]+(\.[0-9]+)?)?/\1.\2.\3\4\,\1.\2\4\,\1\4/g')" >> $GITHUB_ENV
       - name: "Repo: Checkout"
         uses: actions/checkout@v2
       - name: "Docker: Build & Publish"
@@ -33,5 +33,3 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.PUBLISH_TOKEN }}
           tags: latest,stable,${{ env.SEMVER_TAGS }}
-      - name: "Config: Full Image URL"
-        run: echo ::set-env name=FULL_SNAPSHOT_URL::${{ env.IMAGE_URL }}:${{ steps.build.outputs.tag }}
